@@ -1,9 +1,9 @@
 package uk.gov.pay.adminusers.resources;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import jersey.repackaged.com.google.common.collect.ImmutableList;
 import uk.gov.pay.adminusers.utils.Errors;
 
+import java.util.List;
 import java.util.Optional;
 
 import static org.apache.commons.lang3.StringUtils.isBlank;
@@ -16,6 +16,6 @@ public class ForgottenPasswordValidator {
 
             return Optional.empty();
         }
-        return Optional.of(Errors.from(ImmutableList.of("Field [username] is required")));
+        return Optional.of(Errors.from(List.of("Field [username] is required")));
     }
 }
